--- a/JavaScript篇/继承.md
+++ b/JavaScript篇/继承.md
@@ -91,7 +91,8 @@
 ### 5.寄生组合式继承
     在组合继承的基础上加以改进，解决了组合继承出现的问题(父类的构造函数被调用了两次)
     第一次是在子类中Parent.call(this), 为了可以传递参数,所以这里必然要调用一次
-    第二次是在Child.prototype = new Parent()时触发的,我们写这行代码的主要目的其实是想访问到Parent.prototype,那有没有办法可以既访问到Parent.prototype,又不用实例化Parent呢？有, 我们可以用一个空的函数来做跳转来达到我们的目的
+    第二次是在Child.prototype = new Parent()时触发的,我们写这行代码的主要目的其实是想访问到Parent.prototype,
+    那有没有办法可以既访问到Parent.prototype,又不用实例化Parent呢？有, 我们可以用一个空的函数来做跳转来达到我们的目的
 ```
     function Parent(name) {
         this.name = name;
@@ -115,4 +116,5 @@
 
     var child1 = new Child('Jason', 22);
 ```
-    最后引用红宝书中的话：这种方式的高效率体现它只调用了一次 Parent 构造函数，并且因此避免了在 Parent.prototype 上面创建不必要的、多余的属性。与此同时，原型链还能保持不变；因此，还能够正常使用 instanceof 和 isPrototypeOf。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式
+    最后引用红宝书中的话：这种方式的高效率体现它只调用了一次 Parent 构造函数，并且因此避免了在 Parent.prototype 上面创建不必要的、多余的属性。
+    与此同时，原型链还能保持不变；因此，还能够正常使用 instanceof 和 isPrototypeOf。开发人员普遍认为寄生组合式继承是引用类型最理想的继承范式
