--- a/JavaScript篇/继承.md
+++ b/JavaScript篇/继承.md
@@ -1,49 +1,49 @@
 ## 前言
-    对JavaScript实现继承的方式做一些记录与分析
+        JavaScript中无法实现接口继承，只支持实现继承，而且实现继承主要是依靠原型链来实现的。原型链的构建是通过一个类型的实例赋值给另一个构造函数的原型实现的。
 ***
 ### 1.原型链继承
 ```
-    function Parent() {
-        this.name = 'Jason';
-    }
+function Parent() {
+    this.name = 'Jason';
+}
 
-    Parent.prototype.getName = function() {
-        console.log(this.name);
-    }
+Parent.prototype.getName = function() {
+    console.log(this.name);
+}
 
-    function Child() {
-        
-    }
+function Child() {
+    
+}
 
-    Child.prototype = new Parent(); // 子类的原型对象指向父类的实例
+Child.prototype = new Parent(); // 子类的原型对象指向父类的实例
 
-    var child1 = new Child();
+var child1 = new Child();
 
-    console.log(child1.getName()) // Jason
+console.log(child1.getName()) // Jason
 ```
 缺点：
 1. 引用类型的属性被所有实例共享
 2. 无法传递参数、无法实现多继承
 ***
-### 2.借用构造函数(经典继承)
+### 2.借用构造函数
 ```
-    function Parent() {
-        this.names = ['Jason', 'Pink']
-    }
+function Parent() {
+    this.names = ['Jason', 'Pink']
+}
 
-    function Child() {
-        Parent.call(this); // 在子类中重新运行父类的方法
-    }
+function Child() {
+    Parent.call(this); // 在子类中重新运行父类的方法
+}
 
-    var child1 = new Child();
+var child1 = new Child();
 
-    child1.names.push('Lufei');
+child1.names.push('Lufei');
 
-    console.log(child1.names); // ['Jason', 'Pink', 'Lufei']
+console.log(child1.names); // ['Jason', 'Pink', 'Lufei']
 
-    var child2 = new Child();
+var child2 = new Child();
 
-    console.log(child2.names); // ['Jason', 'Pink']
+console.log(child2.names); // ['Jason', 'Pink']
 ```
 优点：
 1. 可以传递参数，可以实现多继承
@@ -54,71 +54,79 @@
 2. 只能继承Parent构造函数的属性和方法,无法继承Parent.prototype上的属性和方法
 3. 每次创建实例都会将构造函数上的方法创建一遍
 ***
-### 3.组合继承(原型链继承+借用构造函数)
+### 3.组合继承(伪经典继承)
 ```
-    function Parent(name) {
-        this.name = name;
-        this.fruits = ['apple', 'pear', 'peach'];
-    }
+function Parent(name) {
+    this.name = name;
+    this.fruits = ['apple', 'pear', 'peach'];
+}
 
-    Parent.prototype.getName = function() {
-        console.log(this.name)
-    }
+Parent.prototype.getName = function() {
+    console.log(this.name)
+}
 
-    function Child(name, age) {
-        this.age = age;
-        Parent.call(this, name); 
-    }
+function Child(name, age) {
+    this.age = age;
+    Parent.call(this, name); 
+}
 
-    Child.prototype = new Parent();
-    Child.prototype.constructor = Child;
+Child.prototype = new Parent();
+Child.prototype.constructor = Child;
 
-    var child1 = new Child('Jason', 22);
+var child1 = new Child('Jason', 22);
 ```
 缺点： Parent的构造函数被调用了两次, Parent构造函数的属性在实例和原型中同时存在(占用内存)
 ***
-### 4.原型式继承
+### 4.原型式继承(Object.create())
 ```
-    function createObj(obj) {
-        function F() {};
-        F.prototype = obj;
-        return new F();
-    }
+function createObj(obj) {
+    function F() {};
+    F.prototype = obj;
+    return new F();
+}
 ```
-将传入的对象作为创建的对象的原型(Object.create的模拟实现)
-
-
 缺点： 引用类型的值始终会被共享
 ***
-### 5.寄生组合式继承
+### 5.寄生式继承
 ```
-    function Parent(name) {
-        this.name = name;
-        this.fruits = ['apple', 'pear', 'peach'];
-    }
-
-    Parent.prototype.getName = function() {
-        console.log(this.name)
-    }
-
-    function Child(name, age) {
-        this.age = age;
-        Parent.call(this, name); 
-    }
-
-    var F = function () {};
-
-    F.prototype = Parent.prototype;
-
-    Child.prototype = new F();
-
-    var child1 = new Child('Jason', 22);
+function createObj(obj) {
+    var clone = Object(obj);
+    clone.sayHi = function () {
+        console.log('Hi')
+    };
+    return clone;
+}
 ```
-在组合继承的基础上加以改进，解决了组合继承出现的问题(父类的构造函数被调用了两次)
-第一次是在子类中Parent.call(this), 为了可以传递参数,所以这里必然要调用一次
-第二次是在Child.prototype = new Parent()时触发的,我们写这行代码的主要目的其实是想访问到Parent.prototype,
-那有没有办法可以既访问到Parent.prototype,又不用实例化Parent呢？有, 我们可以用一个空的函数来做跳转来达到我们的目的
+***
+### 6.寄生组合式继承
+```
+function Parent(name) {
+    this.name = name;
+    this.fruits = ['apple', 'pear', 'peach'];
+}
+
+Parent.prototype.getName = function() {
+    console.log(this.name)
+}
+
+function Child(name, age) {
+    this.age = age;
+    Parent.call(this, name); 
+}
+
+function inheritPrototype(Child, Parent) {
+    var prototype = Object(Parent.prototype);
+    prototype.constructor = Child;
+    Child.prototype = prototype;
+}
+
+inheritPrototype(Child, Parent)
+
+var child1 = new Child('Jason', 22);
+```
+核心：创建一个父类原型对象的一个副本，然后将子类的prototype指向该副本
 
 最后引用红宝书中的话：这种方式的高效率体现它只调用了一次Parent构造函数，并且因此避免了在Parent.prototype上面创建不必要的
 多余的属性。与此同时，原型链还能保持不变；因此，还能够正常使用instanceof和isPrototypeOf。开发人员普遍认为寄生组合式继承
 是引用类型最理想的继承范式
+***
