--- a/Vue篇/组件通信.md
+++ b/Vue篇/组件通信.md
@@ -5,3 +5,96 @@
  * @LastEditors: JasonPink
  * @LastEditTime: 2020-06-15 15:33:18
 --> 
+## 1. props/$emit
+第一种也是我们最常用到的父子组件间的通信，父组件A通过props的方式向子组件B传递，B通过$emit方法传递参数给A,A中使用v-on监听
+```
+<A :data="data" @change="changeLog"></A>
+changeLog() {
+  console.log('子传父')
+}
+
+<B @click="change"></B>
+props: ['data']
+change() {
+  this.$emit('change', value)
+}
+```
+---
+## 2. $emit/$on
+该方法通过一个空的Vue实例作为事件中心，用它来触发和监听事件
+```
+var Event = new Vue();
+
+Event.on(事件名, data => {})
+Event.emit(事件名, data);
+```
+---
+## 3. vuex
+> Vuex实现了一个单向数据流，在全局拥有一个State存放数据，当组件要更改State中的数据，必须通过Mutation进行，Mutation同时提供了订阅者模式供外部插件调用获取State数据的更新。而所有异步操作或批量的同步操作需要走Action，但Action是无法直接修改State的，还是需要通过Mutation来修改State的数据，最后根据State的变化，渲染到视图上。
+---
+## 4. $attrs/$listeners
++ $attrs: 包含了父作用域中不被props所获取的特性绑定（class和style除外）。当一个组件没有声明任何prop时，这里会包含所有父作用域的绑定(class和style除外)，并且可以通过v-bind="$attrs"传入组件内部。通常配合inheritAttrs选项一起使用。
+
++ $listenners: 包含了父作用域中的（不含.native修饰器的）v-on事件监听器。可以通过v-on="$listeners"传入内部组件
+
+```
+//A.vue
+<B :name="JasonPink" :age="24" ></B>
+
+//B.vue
+<p>{{name}}</p>
+<p>{{$attrs}}</p>
+
+export default {
+  props: ['name'],
+  created() {
+    console.log(this.$attrs) // { age: 24}
+  }
+}
+```
+
+
+---
+## 5. provide/inject
+> 允许一个祖先组件向其所有子孙组件注入一个依赖，不管组件层级有多深，并在起上下游关系成立的事件里始终生效。祖先通过provide来提供变量，让后在子孙元素中通过inject来注入变量。
+
+```
+//A.vue
+export default {
+  provide: {
+    name: 'JasonPink'
+  }
+}
+
+//B.vue
+export default {
+  inject: ['name'],
+  mounted() {
+    console.log(this.name) //JasonPink
+  }
+}
+```
+**provide和inject并不是可响应的。这是刻意为之的，然而，如果你传入了一个可监听的对象，那么其对象的属性还是可响应的**
+
+---
+## 6. $parent/$children和ref
++ ref: 如果在普通的DOM元素上使用，引用指向的就是DOM元素，如果在子组件上，引用就指向组件实例
++ $parent/$children: 访问父/子实例
+```
+//父组件
+<template>
+  <component-a ref="comA"></component-a>
+</template>
+
+export default {
+  mounted() {
+    const comA = this.$refs.comA; //子组件实例
+    console.log(comA.title) //获取子组件数据
+    comA.sayHello() //调用子组件方法
+  }
+}
+```
+
+
+
+
