--- a/其它/常见设计模式.md
+++ b/其它/常见设计模式.md
@@ -150,4 +150,13 @@ const button = new Button()
 button.onClick()
 ```
 ---
-## 5.观察者模式 与 发布订阅模式
+## 5.观察者模式
+> 观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个目标对象，当这个目标对象的状态发生变化时，会通知所有观察者对象
+
+### 应用
+Vue响应式系统
+Event事件中心
+
+### 观察者模式与发布-订阅模式的区别
++ 发布者直接接触到订阅者的操作，叫观察者模式。
++ 发布者不直接接触到订阅者，而是由统一的第三方来完成实际的通信的操作，叫做发布-订阅模式
